made accessible, added styles, squashed bugs

--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,8 @@ button {
   font-size: 15px;
   width: fit-content;
 }
+
+input {
+  padding: 10px;
+  margin: 10px 0px 10px 0px;
+}
